change the recipe links to work from github. they were originally from my computer directory

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li>
-        <a href = "file:///home/perky/repos/odin-recipes/recipes/lasagna.html">Lasagna Recipe</a>
+        <a href = "recipes/lasagna.html">Lasagna Recipe</a>
     </li>
     <li>
-        <a href = "file:///home/perky/repos/odin-recipes/recipes/friedRice.html">Fried Rice Recipe</a>
+        <a href = "recipes/friedRice.html">Fried Rice Recipe</a>
     </li>
 
-    <li><a href = "file:///home/perky/repos/odin-recipes/recipes/tomatoSauce.html">Tomato Sauce Recipe</a></li>
+    <li><a href = "recipes/tomatoSauce.html">Tomato Sauce Recipe</a></li>
     </ul>
     <h2>Lasagna</h2>
     <p>
