--- a/recipes/friedRice.html
+++ b/recipes/friedRice.html
@@ -6,7 +6,7 @@
     <title>Fried Rice Recipe</title>
 </head>
 <body>
-    <a href="file:///home/perky/repos/odin-recipes/index.html">Home</a>
+    <a href="../index.html">Home</a>
     <h1>Fried Rice Recipe</h1>
     <h2><strong>Description</strong></h2>
     <p>
