--- a/recipes/tomatoSauce.html
+++ b/recipes/tomatoSauce.html
@@ -6,7 +6,7 @@
     <title>Tomato Sauce Recipe</title>
 </head>
 <body>
-    <a href="file:///home/perky/repos/odin-recipes/index.html">Home</a>
+    <a href="../index.html">Home</a>
     <h1>Tomato Sauce Recipe</h1>
     <h2><strong>Description</strong></h2>
     <p>
