--- a/recipes/friedRice.html
+++ b/recipes/friedRice.html
@@ -20,7 +20,7 @@
         Each spoonful delivers a mix of textures, from the soft grains of rice to the crunchy vegetables. Serve it hot as a main dish or a side, and enjoy its simple, homemade goodness. 
     </p>
     <h2><strong>Ingredients</strong></h2>
-    <ul>
+    <ul class = "list">
         <li>⅔ cup chopped baby carrots</li>
         <li>½ cup frozen green peas</li>
         <li>2 tablespoons vegetable oil</li>
@@ -31,12 +31,12 @@
         <li>2 teaspoons sesame oil, or to taste</li>
     </ul>
     <h2><strong>Steps</strong></h2>
-    <ol>
+    <ol class= "list">
         <li>Assemble Ingredients</li>
         <li>Place carrots in a small saucepan and cover with water. Bring to a low boil and cook for 3 to 5 minutes. Stir in peas, then immediately drain in a colander.</li>
         <li>Heat a wok over high heat. Pour in vegetable oil, then stir in carrots, peas, and garlic; cook for about 30 seconds. Add eggs; stir quickly to scramble eggs with vegetables.Heat a wok over high heat. Pour in vegetable oil, then stir in carrots, peas, and garlic; cook for about 30 seconds. Add eggs; stir quickly to scramble eggs with vegetables.</li>
         <li>Stir in cooked rice. Add soy sauce and toss rice to coat. Drizzle with sesame oil and toss again.</li>
-        <li>Serve hot and <strong>enjoy!</strong></li>
+        <li>Serve hot and <strong class="list-strong">enjoy!</strong></li>
     </ol>
     <img src="https://www.allrecipes.com/thmb/-695p6NRUJBW08joTDDq9xrMiyM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/79543-fried-rice-restaurant-style-DDMFS-4x3-b79a6ea27e0344399257ca1df67ca1cd.jpg">
 </body>
